--- a/templates/article/header.html
+++ b/templates/article/header.html
@@ -15,7 +15,7 @@
             <ul class="nav navbar-nav navbar-right" style="margin-right:10px"> 
                 <li><a href="{% url 'blog:title' %}">网站首页</a></li>
                 <li><a href="#">{{ user.username }}</a></li>
-                <li><a href="{% url 'account:logout' %}">Logout</a></li>
+                <li><a href="{% url 'account:logout' %}">登出</a></li>
             </ul> 
         </div>    
     </nav>              
