--- a/templates/article/column/article_column.html
+++ b/templates/article/column/article_column.html
@@ -1,6 +1,7 @@
 {% extends "article/base.html" %}
 {% load static %}
-{% block title %}article column{% endblock %} {% block content %}
+{% block title %}栏目管理{% endblock %}
+{% block content %}
 <div>
     <p class="text-right"><!--button class="btn btn-primary">add column</button-->
         <button id= "add_column" onclick="add_column()" class="btn btn-primary"> add column</button>
