--- a/templates/account/myself.html
+++ b/templates/account/myself.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
-{% block title %}my information{% endblock %} {% block content %}
+{% block title %}个人信息管理{% endblock %} {% block content %}
 <div class="row text-center vertical-middle-sm">
 
-    <h1>My Information</h1> 
+    <h1>我的个人信息</h1>
     <div class="row">
 
         <div class="col-md-6" > <div class="row">
@@ -46,7 +46,7 @@
                 <div class="col-md-8 text-left">{{userinfo.aboutme}}</div> 
             </div>
             <a href="{% url 'account:edit_my_information' %}">
-                <button class="btn btn-primary btn-lg">edit my information</button>
+                <button class="btn btn-primary btn-lg">编辑</button>
             </a>
         </div>
 
@@ -61,7 +61,7 @@
                 {% endif %}
             </div>
             <div style="margin-right:100px">
-                <button class="btn btn-primary btn-lg" id= "upload_image" onclick="upload_image_layer()">upload my photo</button>
+                <button class="btn btn-primary btn-lg" id= "upload_image" onclick="upload_image_layer()">更换头像</button>
             </div>
         </div>
     </div>
