--- a/templates/article/base.html
+++ b/templates/article/base.html
@@ -18,7 +18,8 @@
             {% block content %}
             {% endblock %}
         </div>
-        {% include 'footer.html' %} 
+        {% include 'footer.html' %}
+        <script type="text/javascript" src="{% static 'js/bootstrap.js'%}"></script>
     </div>
 </body>
 </html>
