--- a/templates/article/column/article_detail.html
+++ b/templates/article/column/article_detail.html
@@ -1,6 +1,6 @@
 {% extends "article/base.html" %}
 {% load static %}
-{% block title %}articles list{% endblock %}
+{% block title %}{{ article.title }}{% endblock %}
 {% block content %} 
 <div>
     <header>
