--- a/templates/article/column/article_list.html
+++ b/templates/article/column/article_list.html
@@ -1,6 +1,6 @@
 {% extends "article/base.html" %}
 {% load static %}
-{% block title %}articles list{% endblock %}
+{% block title %}我的文章列表{% endblock %}
 {% block content %} 
 <div>
     <table class="table table-hover"> 
