--- a/templates/article/column/article_redit.html
+++ b/templates/article/column/article_redit.html
@@ -1,6 +1,6 @@
 {% extends "article/base.html" %}
 {% load static %}
-{% block title %}article column{% endblock %}
+{% block title %}修改文章{% endblock %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'editor/css/style.css' %}">
 <link rel="stylesheet" href="{% static 'editor/css/editormd.css' %}"> 
