--- a/templates/article/header.html
+++ b/templates/article/header.html
@@ -14,7 +14,17 @@
             </ul>
             <ul class="nav navbar-nav navbar-right" style="margin-right:10px"> 
                 <li><a href="{% url 'blog:title' %}">网站首页</a></li>
-                <li><a href="#">{{ user.username }}</a></li>
+                <li>
+                    <div class="dropdown" style="margin-top: 8px;overflow: visible;">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu"
+                                data-toggle="dropdown">{{ user.username }}<span class="caret"></span></button>
+                        <ul class="dropdown-menu dropdown-menu-left">
+                            <li><a href="{% url 'account:password_change' %}">修改密码</a></li>
+                            <li><a href="{% url 'account:my_information' %}">个人信息</a></li>
+                            <li><a href="{% url 'article:article_column' %}">后台管理</a></li>
+                        </ul>
+                    </div>
+                </li>
                 <li><a href="{% url 'account:logout' %}">登出</a></li>
             </ul> 
         </div>    
